# simo-language

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: apply-simo-05.yml  ci.yml  rename-to-simo.yml
.simo-bootstrap/: chunk00  chunk01  chunk02  chunk03  chunk04  chunk05  chunk06  chunk07  trigger
docs/: ARCHITECTURE.md  EDITOR.md  LANGUAGE.md  PLATFORM_PLAN.md  ROADMAP.md  WEB_AND_APPS.md
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
editors/vscode/snippets/: simo.json
editors/vscode/syntaxes/: simo.tmLanguage.json
editors/vscode/test/: language.test.js
examples/: section16.simo  section16.sola
examples/app/: simo.toml
examples/desktop/: main.simo  simo.toml
examples/pwa/: main.simo  simo.toml
examples/web/: main.simo  simo.toml
simo/: __init__.py  __main__.py  ast_nodes.py  branding.py  cli.py  desktop.py  desktop_build.py  desktop_element.py  desktop_native_api.py  desktop_runtime.py  desktop_ui.py  devserver.py  environment.py  errors.py  formatter.py  interpreter.py  interpreter_builtins.py  interpreter_evaluate.py  interpreter_execute.py  interpreter_support.py  interpreter_values.py  lexer.py  parser.py  parser_control.py  parser_expressions.py  parser_statements.py  parser_tokens.py  parser_ui.py  project.py  source.py  testing.py  tokens.py  web.py  web_codegen.py  web_elements.py  web_outputs.py  web_runtime.py  windows_integration.py
simo/resources/editor/: extension.js  language.js  package.json
simo/resources/editor/syntaxes/: simo.tmLanguage.json
sola/: __init__.py  __main__.py  cli.py  environment.py  errors.py  interpreter.py  lexer.py  parser.py  tokens.py
tests/: test_branding.py  test_cli.py  test_desktop.py  test_interpreter.py  test_web.py
