[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simo-language"
version = "0.2.0"
description = "Interpreter for the Simo programming language"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
simo = "simo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["simo*"]

[tool.setuptools.package-data]
simo = ["py.typed"]
