[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simo-language"
version = "0.6.1"
description = "A readable programming language for console programs, websites, installable PWAs, and native desktop apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [{ name = "Simo Language contributors" }]
keywords = ["programming-language", "compiler", "interpreter", "web", "pwa", "desktop"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Interpreters",
]

[project.optional-dependencies]
desktop = ["pyinstaller>=6,<7"]

[project.scripts]
simo = "simo.cli:main"

[project.urls]
Repository = "https://github.com/snwaf929-cpu/simo-language"
Issues = "https://github.com/snwaf929-cpu/simo-language/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["simo*"]

[tool.setuptools.package-data]
simo = [
  "py.typed",
  "resources/icons/*.ico",
  "resources/icons/*.icns",
  "resources/icons/*.png",
  "resources/editor/*.json",
  "resources/editor/icons/*.png",
  "resources/editor/syntaxes/*.json",
  "resources/editor/snippets/*.json",
]
